--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dot": "^1.1.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
